/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.8/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

jar {
    manifest {
        attributes 'Main-Class': 'plagdetect.App'
    }
}

repositories {
    mavenCentral()
    google()
    maven { url "https://maven.google.com/" }
    maven { url "https://googleapis.dev/java/google-api-services-drive/latest/" }
}

javafx {
    version = "17.0.6"
    modules = [ 'javafx.base', 'javafx.graphics', 'javafx.controls', 'javafx.fxml' ]
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation libs.junit.jupiter

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // These dependency is used by the application.
    implementation libs.guava
    implementation 'com.mysql:mysql-connector-j:9.2.0'

    implementation 'org.openjfx:javafx-base:17.0.6'
    implementation 'org.openjfx:javafx-graphics:17.0.6'
    implementation 'org.openjfx:javafx-controls:17.0.6'
    implementation 'org.openjfx:javafx-fxml:17.0.6'

    implementation 'org.slf4j:slf4j-api:2.0.6'
    implementation 'com.ibm.icu:icu4j:76.1'
    implementation 'com.ibm.icu:icu4j-charset:76.1'
    implementation 'org.jgrapht:jgrapht-core:1.5.2'
    implementation 'org.apfloat:apfloat:1.10.1'
    implementation 'org.jheaps:jheaps:0.14'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.18.2'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.18.2'
    implementation 'org.apache.commons:commons-math3:3.6.1'

    implementation 'de.jplag:jplag:6.0.0'
    implementation 'de.jplag:language-api:6.0.0'
    implementation 'de.jplag:languages:6.0.0'
    implementation 'de.jplag:java:6.0.0'
    
    implementation 'com.google.api-client:google-api-client:1.34.1'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
    implementation 'com.google.apis:google-api-services-drive:v3-rev20230822-2.0.0'
    implementation 'com.google.http-client:google-http-client-jackson2:1.41.0'
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.16.0'

    compileOnly 'org.kohsuke.metainf-services:metainf-services:1.11'
	
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'plagdetect.App'
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}

tasks.test {
    testLogging {
        events "passed", "skipped", "failed"
        showStandardStreams = true
    }
}
